# eve-watcher

./: .gitignore  README.md  build.bat  main.py  pyproject.toml
src/: overview.py  settings.py
