[project]
name = "eve-watcher"
version = "0.1.0"
description = "The assistant who looks at the overview"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mss>=10.0.0",
    "opencv-python>=4.11.0.86",
    "pyautogui>=0.9.54",
    "pyglet>=2.1.2",
    "pyinstaller>=6.12.0",
]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "ruff>=0.9.6",
]

[tool.mypy]
python_version = "3.12"
follow_imports = "skip"
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_reexport = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
]
line-length = 79
fix = true
target-version = "py312"

[tool.ruff.lint]
select = ["COM", "T100", "E", 'F', "W", "ERA", "N", "I"]
ignore = ["F821", "COM812"]
fixable = ["ALL"]

[tool.ruff.format]
quote-style = "single"
docstring-code-format = true

[tool.ruff.lint.isort]
case-sensitive = true
